deployments/staging/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank
  namespace: go-code
spec:
  selector:
    app: simple-bank
    tier: api
  ports:
    - port: 8081
      targetPort: 8080
    - port: 9091
      targetPort: 9090
