deployments/staging/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress.simple-bank
  namespace: go-code
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "grpc"
spec:
  ingressClassName: nginx
  rules:
    - host: api-sb.vovanhoangtuan.com
      http:
        paths:
          - backend:
              service:
                name: simple-bank
                port:
                  name: http
            pathType: Prefix
            path: /
    - host: grpc-sb.vovanhoangtuan.com
      http:
        paths:
          - backend:
              service:
                name: simple-bank
                port:
                  number: 9091
            pathType: Prefix
            path: /
